--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       # enable DEBUG mode to output more logs
       # DEBUG : true
       # A secret key that is used for securely signing the session cookie and encrypting sensitive information on the database. You can generate a strong key using `openssl rand -base64 42`.
-      SECRET_KEY: sk-9f73s3ljTXVcMT3Blb3ljTqtsKiGHXVcMT3BlbkFJLK7U
+      SECRET_KEY: sk-35V405FdcGwWcrQ03s0iNHZ/QoX1Po9moTgGo3MlLkqxxtAPhmI+7ckq
       # The base URL of console application web frontend, refers to the Console base URL of WEB service if console domain is
       # different from api or web app domain.
       # example: http://cloud.dify.ai
@@ -41,7 +41,7 @@ services:
       # The configurations of postgres database connection.
       # It is consistent with the configuration in the 'db' service below.
       DB_USERNAME: postgres
-      DB_PASSWORD: difyai123456
+      DB_PASSWORD: operation_platform_difyai
       DB_HOST: db
       DB_PORT: 5432
       DB_DATABASE: dify
@@ -50,13 +50,13 @@ services:
       REDIS_HOST: redis
       REDIS_PORT: 6379
       REDIS_USERNAME: ''
-      REDIS_PASSWORD: difyai123456
+      REDIS_PASSWORD: operation_platform_difyai
       REDIS_USE_SSL: 'false'
       # use redis db 0 for redis cache
       REDIS_DB: 0
       # The configurations of celery broker.
       # Use redis as the broker, and redis db 1 for celery broker.
-      CELERY_BROKER_URL: redis://:difyai123456@redis:6379/1
+      CELERY_BROKER_URL: redis://:operation_platform_difyai@redis:6379/1
       # Specifies the allowed origins for cross-origin requests to the Web API, e.g. https://dify.app or * for all origins.
       WEB_API_CORS_ALLOW_ORIGINS: '*'
       # Specifies the allowed origins for cross-origin requests to the console API, e.g. https://cloud.dify.ai or * for all origins.
@@ -101,7 +101,7 @@ services:
       # The Qdrant endpoint URL. Only available when VECTOR_STORE is `qdrant`.
       QDRANT_URL: http://qdrant:6333
       # The Qdrant API key.
-      QDRANT_API_KEY: difyai123456
+      QDRANT_API_KEY: operation_platform_difyai
       # The Qdrant client timeout setting.
       QDRANT_CLIENT_TIMEOUT: 20
       # The Qdrant client enable gRPC mode.
@@ -123,13 +123,13 @@ services:
       RELYT_HOST: db
       RELYT_PORT: 5432
       RELYT_USER: postgres
-      RELYT_PASSWORD: difyai123456
+      RELYT_PASSWORD: operation_platform_difyai
       RELYT_DATABASE: postgres
       # pgvector configurations
       PGVECTOR_HOST: pgvector
       PGVECTOR_PORT: 5432
       PGVECTOR_USER: postgres
-      PGVECTOR_PASSWORD: difyai123456
+      PGVECTOR_PASSWORD: operation_platform_difyai
       PGVECTOR_DATABASE: dify
       # Mail configuration, support: resend, smtp
       MAIL_TYPE: ''
@@ -202,7 +202,7 @@ services:
       # The configurations of postgres database connection.
       # It is consistent with the configuration in the 'db' service below.
       DB_USERNAME: postgres
-      DB_PASSWORD: difyai123456
+      DB_PASSWORD: operation_platform_difyai
       DB_HOST: db
       DB_PORT: 5432
       DB_DATABASE: dify
@@ -210,11 +210,11 @@ services:
       REDIS_HOST: redis
       REDIS_PORT: 6379
       REDIS_USERNAME: ''
-      REDIS_PASSWORD: difyai123456
+      REDIS_PASSWORD: operation_platform_difyai
       REDIS_DB: 0
       REDIS_USE_SSL: 'false'
       # The configurations of celery broker.
-      CELERY_BROKER_URL: redis://:difyai123456@redis:6379/1
+      CELERY_BROKER_URL: redis://:operation_platform_difyai@redis:6379/1
       # The type of storage to use for storing user files. Supported values are `local` and `s3` and `azure-blob` and `google-storage`, Default: `local`
       STORAGE_TYPE: local
       STORAGE_LOCAL_PATH: storage
@@ -242,7 +242,7 @@ services:
       # The Qdrant endpoint URL. Only available when VECTOR_STORE is `qdrant`.
       QDRANT_URL: http://qdrant:6333
       # The Qdrant API key.
-      QDRANT_API_KEY: difyai123456
+      QDRANT_API_KEY: operation_platform_difyai
       # The Qdrant client timeout setting.
       QDRANT_CLIENT_TIMEOUT: 20
       # The Qdrant client enable gRPC mode.
@@ -276,13 +276,13 @@ services:
       RELYT_HOST: db
       RELYT_PORT: 5432
       RELYT_USER: postgres
-      RELYT_PASSWORD: difyai123456
+      RELYT_PASSWORD: operation_platform_difyai
       RELYT_DATABASE: postgres
       # pgvector configurations
       PGVECTOR_HOST: pgvector
       PGVECTOR_PORT: 5432
       PGVECTOR_USER: postgres
-      PGVECTOR_PASSWORD: difyai123456
+      PGVECTOR_PASSWORD: operation_platform_difyai
       PGVECTOR_DATABASE: dify
       # Notion import configuration, support public and internal
       NOTION_INTEGRATION_TYPE: public
@@ -327,7 +327,7 @@ services:
     environment:
       PGUSER: postgres
       # The password for the default postgres user.
-      POSTGRES_PASSWORD: difyai123456
+      POSTGRES_PASSWORD: operation_platform_difyai
       # The name of the default postgres database.
       POSTGRES_DB: dify
       # postgres data directory
@@ -351,7 +351,7 @@ services:
       # Mount the redis data directory to the container.
       - ./volumes/redis/data:/data
     # Set the redis password when startup redis server.
-    command: redis-server --requirepass difyai123456
+    command: redis-server --requirepass operation_platform_difyai
     healthcheck:
       test: [ "CMD", "redis-cli", "ping" ]
     # uncomment to expose redis port to host
@@ -413,63 +413,24 @@ services:
     networks:
       - ssrf_proxy_network
       - default
-  # Qdrant vector store.
-  # uncomment to use qdrant as vector store.
-  # (if uncommented, you need to comment out the weaviate service above,
-  # and set VECTOR_STORE to qdrant in the api & worker service.)
-  # qdrant:
-  #   image: langgenius/qdrant:v1.7.3
-  #   restart: always
-  #   volumes:
-  #     - ./volumes/qdrant:/qdrant/storage
-  #   environment:
-  #     QDRANT_API_KEY: 'difyai123456'
-  #   # uncomment to expose qdrant port to host
-  #   # ports:
-  #   #  - "6333:6333"
-  #   #  - "6334:6334"
-
-  # The pgvector vector database.
-  # Uncomment to use qdrant as vector store.
-  # pgvector:
-  #   image: pgvector/pgvector:pg16
-  #   restart: always
-  #   environment:
-  #     PGUSER: postgres
-  #     # The password for the default postgres user.
-  #     POSTGRES_PASSWORD: difyai123456
-  #     # The name of the default postgres database.
-  #     POSTGRES_DB: dify
-  #     # postgres data directory
-  #     PGDATA: /var/lib/postgresql/data/pgdata
-  #   volumes:
-  #     - ./volumes/pgvector/data:/var/lib/postgresql/data
-  #   # uncomment to expose db(postgresql) port to host
-  #   # ports:
-  #   #   - "5433:5432"
-  #   healthcheck:
-  #     test: [ "CMD", "pg_isready" ]
-  #     interval: 1s
-  #     timeout: 3s
-  #     retries: 30
 
 
   # The nginx reverse proxy.
   # used for reverse proxying the API service and Web service.
-  nginx:
-    image: nginx:latest
-    restart: always
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/proxy.conf:/etc/nginx/proxy.conf
-      - ./nginx/conf.d:/etc/nginx/conf.d
-      #- ./nginx/ssl:/etc/ssl
-    depends_on:
-      - api
-      - web
-    ports:
-      - "80:80"
-      #- "443:443"
+#  nginx:
+#    image: nginx:latest
+#    restart: always
+#    volumes:
+#      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+#      - ./nginx/proxy.conf:/etc/nginx/proxy.conf
+#      - ./nginx/conf.d:/etc/nginx/conf.d
+#      #- ./nginx/ssl:/etc/ssl
+#    depends_on:
+#      - api
+#      - web
+#    ports:
+#      - "80:80"
+#      #- "443:443"
 networks:
   # create a network between sandbox, api and ssrf_proxy, and can not access outside.
   ssrf_proxy_network:
