--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -317,8 +317,7 @@ services:
       # The DSN for Sentry error reporting. If not set, Sentry error reporting will be disabled.
       SENTRY_DSN: ''
     # uncomment to expose dify-web port to host
-    # ports:
-    #   - "3000:3000"
+      ports: "30003:30003"
 
   # The postgres database.
   db:
